--- a/UI.html
+++ b/UI.html
@@ -45,6 +45,9 @@
         .student-body{margin-top:12px;display:flex;justify-content:space-between;align-items:center;color:var(--muted)}
         .student-footer{display:flex;justify-content:flex-end;margin-top:12px}
         .btn.ghost{background:transparent;color:var(--accent);border:1px solid rgba(99,102,241,0.12);box-shadow:none}
+        /* colored variant for the small View button inside student cards */
+        .student-footer .btn.ghost.small{background:linear-gradient(90deg,var(--primary),var(--accent));color:#fff;border:0;padding:8px 10px;border-radius:8px;box-shadow:0 8px 22px rgba(59,130,246,0.12);transition:transform .12s ease,box-shadow .12s ease}
+        .student-footer .btn.ghost.small:hover{transform:translateY(-3px);box-shadow:0 18px 36px rgba(59,130,246,0.14)}
         .student-card.failed{border-color:rgba(239,68,68,0.18);background:#fff7f7}
         /* grade color accents */
         .student-card.grade-A{border-left:6px solid #16a34a}
@@ -89,7 +92,17 @@
         .small-bar{height:10px;background:#f1f5f9;border-radius:6px;overflow:hidden}
         .small-bar > i{display:block;height:100%;background:var(--primary)}
         table{width:100%;border-collapse:collapse;margin-top:12px;border-radius:8px;overflow:hidden}
-        thead th{background:#fbfdff;position:sticky;top:0;padding:12px;text-align:left;font-weight:700}
+        /* Highlighted header for all tables */
+        thead th{
+            background:linear-gradient(90deg,var(--primary),var(--accent));
+            color:#fff;
+            position:sticky;
+            top:0;
+            padding:12px;
+            text-align:left;
+            font-weight:700;
+            box-shadow:0 6px 18px rgba(59,130,246,0.06);
+        }
         tbody td{padding:12px;border-bottom:1px solid #f3f4f6}
         tbody tr:hover{background:#fbfdff}
         /* table color variants per grade */
